--- a/configs/data/KuavoRosbag2Lerobot.yaml
+++ b/configs/data/KuavoRosbag2Lerobot.yaml
@@ -10,7 +10,7 @@ rosbag:
   rosbag_dir: /root/cloud/robot/original_data/TASK1-TargetPlacement # rosbag文件目录
   num_used: null # 使用的rosbag数量(若设置为任意数字，则会随机采样选择)
   lerobot_dir: /root/robot/data # 转换后的lerobot文件的保存目录
-  episode_range: null # null=全清空并转换所有bag文件, [start,end]=清空指定范围并转换对应索引的bag文件
+  episode_range: [200, 399] # null=全清空并转换所有bag文件, [start,end]=清空指定范围并转换对应索引的bag文件
 
 dataset:
   only_arm: true # 默认true, 是否只使用手臂数据, 目前的模仿学习只用于手臂数据，选择true会自动屏蔽足关节数据
