--- a/configs/policy/act_config.yaml
+++ b/configs/policy/act_config.yaml
@@ -8,7 +8,9 @@ hydra: # Hydra 配置文件保存目录，仅供参数检查使用
 task: 'task_1_200_episodes' # 自定义任务名称，如果不使用本地数据想使用huggingface官方数据，请指定，例如pusht，aloha_sim_insertion_human等
 method: 'act_bs64_usedepth_nofuse' # 自定义方法名称
 timestamp: ${now:%Y%m%d_%H%M%S} # 自动获取的运行时时间戳
-episodes_to_use: [0, 999] # 限制使用的episodes数量，[start, end]格式
+episodes_to_use:
+  - 0
+  - 999  # 限制使用的episodes数量，[start, end]格式
 # 训练时模型参数的保存目录在outputs/train/<task>/<method>/<timestamp>中
 repoid: 'lerobot/${task}' # lerobot新版本需指定这个，仅供参考，设置了即可
 root: '/robot/data/task-1/1-2000/lerobot' # 你的本地转换好的lerobot数据的目录
