--- a/configs/data/KuavoRosbag2Lerobot.yaml
+++ b/configs/data/KuavoRosbag2Lerobot.yaml
@@ -7,9 +7,10 @@ hydra: # Hydra 配置文件保存目录，仅供参数检查使用
 
 # kuavo rosbag数据转换成lerobot-parquet格式0配置文件
 rosbag:
-  rosbag_dir: /root/cloud/robot/original_data/TASK1-TargetPlacement # rosbag文件目录
+  rosbag_dir: /mnt/e/robot/data/kuavo-data-challenge_SIMDATA/TASK1-TargetPlacement # rosbag文件目录
   num_used: null # 使用的rosbag数量(若设置为任意数字，则会随机采样选择)
-  lerobot_dir: /robot/data/task-1/1-2000 # 转换后的lerobot文件的保存目录
+  lerobot_dir: /mnt/e/robot/data/data/task1 # 转换后的lerobot文件的保存目录
+  batch_size: 400 # 每批处理的rosbag文件数量，会创建对应的子文件夹(如1-400, 401-800等)
 
 dataset:
   only_arm: true # 默认true, 是否只使用手臂数据, 目前的模仿学习只用于手臂数据，选择true会自动屏蔽足关节数据
