更新评估配置文件，调整关节权重和关键关节索引，优化离线评估参数，确保注释清晰易懂，保持配置一致性。

--- a/configs/eval/base_eval_config.yaml
+++ b/configs/eval/base_eval_config.yaml
@@ -36,8 +36,10 @@ evaluation:
         1.0,
         1.0,
         1.0,
-      ] # 14关节权重
-    critical_joints: [0, 1, 6, 7] # 关键关节索引
+        1.0,
+        1.0,
+      ] # 16关节权重（双臂14关节+2手爪）
+    critical_joints: [0, 1, 6, 7, 14, 15] # 关键关节索引（包含手爪）
 
   # 时序分析
   temporal_consistency:
