更新humanoid_diffusion_config.yaml配置文件，调整num_workers为24，启用模型恢复功能并设置恢复时间戳，确保训练过程的灵活性和可追踪性。

--- a/configs/policy/humanoid_diffusion_config.yaml
+++ b/configs/policy/humanoid_diffusion_config.yaml
@@ -27,12 +27,12 @@ training:
   ema_power: 0.75
 
   batch_size: 64 # 分层架构使用稍小的batch size
-  num_workers: 25
+  num_workers: 24
   drop_last: False
 
   max_training_step: null
-  resume: False
-  resume_timestamp: null
+  resume: True
+  resume_timestamp: task_specific_run_20250929_103238
 
   # 数据增广相关的配置
   RGB_Augmenter:
