更新humanoid_diffusion_config.yaml文件，禁用模型恢复功能。优化train_hierarchical_policy.py和train_hierarchical_task_specific.py文件，添加随机数生成器状态保存逻辑，确保模型和检查点保存的完整性和可追踪性。

--- a/configs/policy/humanoid_diffusion_config.yaml
+++ b/configs/policy/humanoid_diffusion_config.yaml
@@ -31,7 +31,7 @@ training:
   drop_last: False
 
   max_training_step: null
-  resume: True
+  resume: False
   resume_timestamp: task_specific_run_20250929_103238
 
   # 数据增广相关的配置
