更新humanoid_diffusion_config.yaml文件，启用模型恢复功能并更新恢复时间戳，确保训练过程的灵活性和可追踪性。

--- a/configs/policy/humanoid_diffusion_config.yaml
+++ b/configs/policy/humanoid_diffusion_config.yaml
@@ -31,8 +31,8 @@ training:
   drop_last: False
 
   max_training_step: null
-  resume: False
-  resume_timestamp: task_specific_run_20250929_103238
+  resume: True
+  resume_timestamp: task_specific_run_20250929_115908
 
   # 数据增广相关的配置
   RGB_Augmenter:
