--- a/configs/eval/offline_hierarchical_eval.yaml
+++ b/configs/eval/offline_hierarchical_eval.yaml
@@ -57,7 +57,7 @@ hierarchical:
     planning:
       enabled: false  # 测试时禁用规划层
       hidden_size: 1024  # 与训练时保持一致
-      layers: 2
+      layers: 4  # 与训练时保持一致（有layers.0,1,2,3）
       heads: 4
       dim_feedforward: 4096  # 通常是hidden_size的4倍
 
