更新配置文件offline_hierarchical_eval.yaml，将推理延迟预算从100毫秒增加至500毫秒，以支持离线评估。同时在HierarchicalEvaluator和HierarchicalScheduler中添加调试信息，增强对延迟预算的处理逻辑，提升代码的可维护性和调试能力。

--- a/configs/eval/offline_hierarchical_eval.yaml
+++ b/configs/eval/offline_hierarchical_eval.yaml
@@ -67,7 +67,7 @@ hierarchical_evaluation:
   enabled_layers: ['safety', 'manipulation'] # 测试时启用的层
 
   # 性能预算配置
-  latency_budget_ms: 100.0 # 推理延迟预算（毫秒）
+  latency_budget_ms: 500.0 # 推理延迟预算（毫秒）- 增加以允许离线评估
   enable_adaptive_inference: True # 启用自适应推理
 
   # 层激活分析
