--- a/configs/policy/humanoid_diffusion_config.yaml
+++ b/configs/policy/humanoid_diffusion_config.yaml
@@ -10,7 +10,7 @@ method: 'humanoid_hierarchical' # 自定义方法名称，区分分层架构
 timestamp: ${now:%Y%m%d_%H%M%S} # 自动获取的运行时时间戳
 episodes_to_use:
   - 0
-  - 299 # 限制使用的episodes数量，[start, end]格式 (增加到300个episodes以匹配标准diffusion)
+  - 199 # 限制使用的episodes数量，[start, end]格式 (增加到300个episodes以匹配标准diffusion)
 
 repoid: 'lerobot/${task}'
 root: '/root/robot/data/task1/data/lerobot/1-400/' # 你的本地转换好的lerobot数据的目录（任务一数据）
@@ -120,7 +120,7 @@ policy:
         output_dim: 16 # 对应手臂控制输出
         response_time_ms: 10
         priority: 1
-        enabled: True
+        enabled: False # 任务1数据无IMU，禁用安全层
 
       gait:
         type: 'Hybrid' # GRU + Transformer
@@ -131,7 +131,7 @@ policy:
         tf_dim: 128
         horizon: 20
         priority: 2
-        enabled: True
+        enabled: False # 任务1数据无腿部，禁用步态层
 
       manipulation:
         type: 'Transformer'
@@ -141,7 +141,7 @@ policy:
         dim_feedforward: 2048
         horizon: 100
         priority: 3
-        enabled: True
+        enabled: True # 只启用操作层（抓取核心）
 
       planning:
         type: 'Transformer'
@@ -151,44 +151,29 @@ policy:
         dim_feedforward: 4096
         horizon: 500
         priority: 4
-        enabled: True
+        enabled: False # 暂时禁用规划层
 
-    # 层权重配置 (修改为抓取任务优先)
+    # 层权重配置 (任务1：只使用操作层)
     layer_weights:
-      safety: 1.0 # 降低安全层权重，避免过度保守行为
-      gait: 1.0 # 降低步态层权重
-      manipulation: 2.0 # 提高操作层权重 - 抓取任务的核心！
-      planning: 0.5 # 降低规划层权重
+      safety: 0.0 # 禁用
+      gait: 0.0 # 禁用
+      manipulation: 1.0 # 唯一启用的层
+      planning: 0.0 # 禁用
 
     # 任务特化配置
     task_specialization:
       enable: True
       modules: ['dynamic_grasping', 'weighing', 'placement', 'sorting']
 
-    # 课程学习配置 - 修改为manipulation优先策略
+    # 课程学习配置 - 任务1：单层训练（只有手臂数据）
     curriculum_learning:
       enable: True
-      # 传统通用课程学习（作为后备）
+      # 单阶段训练：只训练manipulation层
       universal_stages:
         stage1:
-          name: 'manipulation_first'
-          layers: ['manipulation'] # 先学抓取行为！
-          epochs: 8
-          loss_threshold: 0.1
-        stage2:
-          name: 'manipulation_safety'
-          layers: ['manipulation', 'safety'] # 在抓取基础上加安全约束
-          epochs: 7
-          loss_threshold: 0.08
-        stage3:
-          name: 'manipulation_safety_gait'
-          layers: ['manipulation', 'safety', 'gait'] # 继续添加步态
-          epochs: 5
-          loss_threshold: 0.06
-        stage4:
-          name: 'full_hierarchy'
-          layers: ['safety', 'gait', 'manipulation', 'planning'] # 最后全开
-          epochs: 10
+          name: 'manipulation_only'
+          layers: ['manipulation'] # 只训练抓取层
+          epochs: 5 # 单层训练可以用更多epochs
           loss_threshold: 0.05
 
       # 任务特定训练模式
