--- a/configs/policy/vla_config_36dim.yaml
+++ b/configs/policy/vla_config_36dim.yaml
@@ -196,9 +196,6 @@ policy:
       - { idx: 34, type: 'ankle', side: 1, id: 34, name: 'right_toe_pitch_3' }
       - { idx: 35, type: 'ankle', side: 1, id: 35, name: 'right_toe_pitch_4' }
 
-  # 图像配置
-  use_depth: True
-  crop_is_random: True
-  crop_shape: [420, 560]
-  resize_shape: [210, 280]
-  use_amp: True
+  # 图像和训练配置
+  use_depth: True # 使用深度图像
+  use_amp: True # 使用混合精度训练
