--- a/configs/policy/vla_config.yaml
+++ b/configs/policy/vla_config.yaml
@@ -89,8 +89,8 @@ policy:
   drop_n_last_frames: 7
 
   num_train_timesteps: 100
-  num_inference_steps: 50
-  noise_scheduler_type: DDPM
+  num_inference_steps: 10
+  noise_scheduler_type: DDIM
   beta_schedule: squaredcos_cap_v2
   beta_start: 0.0001
   beta_end: 0.02
