Update kuavo_vla_sim_env.yaml with new timestamp, adjust num_workers in vla_config.yaml from 25 to 23, and enable model resuming with the latest timestamp. Enhance image and depth preprocessing functions in eval_kuavo.py to include center cropping before resizing, ensuring consistency with training parameters.

--- a/configs/policy/vla_config.yaml
+++ b/configs/policy/vla_config.yaml
@@ -29,14 +29,14 @@ training:
   ema_power: 0.75
 
   batch_size: 128 # VLA可以使用较小的batch size
-  num_workers: 25
+  num_workers: 23
   drop_last: False
 
   test_training_mode: False
   test_training_epochs: 2
   max_training_step: null
-  resume: False
-  resume_timestamp: null
+  resume: True
+  resume_timestamp: run_20251010_145038
 
   # 优化器配置
   scheduler_name: cosine
