--- a/configs/policy/vla_config.yaml
+++ b/configs/policy/vla_config.yaml
@@ -36,7 +36,7 @@ training:
   test_training_epochs: 2
   max_training_step: null
   resume: True
-  resume_timestamp: run_20251010_145038
+  resume_timestamp: run_20251010_145038/best
 
   # 优化器配置
   scheduler_name: cosine
