--- a/configs/policy/vla_config.yaml
+++ b/configs/policy/vla_config.yaml
@@ -35,7 +35,7 @@ training:
   test_training_mode: False
   test_training_epochs: 2
   max_training_step: null
-  resume: True
+  resume: False
   resume_timestamp: run_20251010_145038/best
 
   # 优化器配置
