Update vla_config.yaml to set resume_timestamp to null, ensuring no previous training checkpoints are referenced. This change reinforces a clean training slate for upcoming sessions.

--- a/configs/policy/vla_config.yaml
+++ b/configs/policy/vla_config.yaml
@@ -36,7 +36,7 @@ training:
   test_training_epochs: 2
   max_training_step: null
   resume: False
-  resume_timestamp: run_20251010_145038/best
+  resume_timestamp: null
 
   # 优化器配置
   scheduler_name: cosine
