Update smolvla_sequential_base.yaml to include task configuration for Hydra and modify train_smolvla_sequential.py to retrieve the task name from the updated configuration. This enhances task management and ensures consistency in task loading.

--- a/configs/policy/smolvla_sequential_base.yaml
+++ b/configs/policy/smolvla_sequential_base.yaml
@@ -16,6 +16,9 @@ hydra:
 timestamp: ${now:%Y%m%d_%H%M%S}
 method: 'smolvla_sequential'
 
+# 任务配置字段（Hydra需要这个字段才能进行覆盖）
+task: tasks/task1_moving_grasp
+
 # ==================== SmolVLA策略配置 ====================
 policy_name: smolvla
 
